--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "zscroller",
-  "version": "0.2.5",
+  "version": "0.3.0",
   "description": "dom scroller based on zynga scroller",
   "keywords": [
     "zynga scroller",
@@ -16,40 +16,35 @@
   },
   "files": [
     "lib",
+    "es",
     "vendor",
     "assets/*.css"
   ],
   "licenses": "MIT",
   "main": "./lib/DOMScroller",
+  "module": "./es/DOMScroller",
   "config": {
     "port": 8007
   },
   "scripts": {
-    "compile": "rc-tools run compile",
+    "compile": "rc-tools run compile --babel-runtime",
     "build": "rc-tools run build",
     "gh-pages": "rc-tools run gh-pages",
     "start": "rc-tools run server",
-    "pub": "rc-tools run pub",
-    "lint": "rc-tools run lint",
-    "karma": "rc-tools run karma",
-    "saucelabs": "rc-tools run saucelabs",
-    "test": "rc-tools run test",
-    "chrome-test": "rc-tools run chrome-test",
-    "coverage": "rc-tools run coverage"
+    "pub": "rc-tools run pub --babel-runtime",
+    "lint": "rc-tools run lint"
   },
   "devDependencies": {
-    "expect.js": "0.3.x",
-    "fastclick": "^1.0.6",
     "pre-commit": "1.x",
-    "rc-tools": "5.x",
+    "rc-tools": "6.x",
     "react": "15.x",
-    "react-addons-test-utils": "15.x",
     "react-dom": "15.x"
   },
   "pre-commit": [
     "lint"
   ],
   "dependencies": {
+    "babel-runtime": "6.x",
     "raf": "^3.3.0"
   }
 }
