--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "zscroller",
-  "version": "0.3.1",
+  "version": "0.4.0",
   "description": "dom scroller based on zynga scroller",
   "keywords": [
     "zynga scroller",
@@ -44,7 +44,6 @@
     "lint"
   ],
   "dependencies": {
-    "babel-runtime": "6.x",
-    "raf": "^3.3.0"
+    "babel-runtime": "6.x"
   }
 }
