--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "zscroller",
-  "version": "0.5.0",
+  "version": "0.5.1",
   "description": "dom scroller based on zynga scroller",
   "keywords": [
     "zynga scroller",
@@ -28,6 +28,9 @@
       [
         "@pika/plugin-build-web"
       ],
+      [
+        "@pika/plugin-build-node"
+      ],
       ["@pika/plugin-copy-assets"]
     ]
   },
@@ -40,6 +43,7 @@
     "lint-staged": "lint-staged"
   },
   "devDependencies": {
+    "@pika/plugin-build-node": "^0.5.1",
     "@pika/plugin-build-types": "^0.5.1",
     "@pika/plugin-build-web": "^0.5.1",
     "@pika/plugin-copy-assets": "^0.5.1",
