--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
         }
       ],
       [
-        "@pika/plugin-build-web"
+        "pika-plugin-build-web-babel"
       ],
       [
         "@pika/plugin-build-node"
@@ -45,7 +45,7 @@
   "devDependencies": {
     "@pika/plugin-build-node": "^0.5.1",
     "@pika/plugin-build-types": "^0.5.1",
-    "@pika/plugin-build-web": "^0.5.1",
+    "pika-plugin-build-web-babel": "^0.6.0",
     "@pika/plugin-copy-assets": "^0.5.1",
     "@pika/plugin-standard-pkg": "^0.5.1",
     "@pika/types": "^0.5.1",
