--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "zscroller",
-  "version": "0.5.4",
+  "version": "0.6.0-beta.1",
   "description": "dom scroller based on zynga scroller",
   "keywords": [
     "zynga scroller",
@@ -18,18 +18,10 @@
   "@pika/pack": {
     "pipeline": [
       [
-        "@pika/plugin-standard-pkg",
-        {
-          "exclude": [
-            "__tests__/**/*"
-          ]
-        }
+        "@pika/plugin-ts-standard-pkg"
       ],
       [
         "pika-plugin-build-web-babel"
-      ],
-      [
-        "@pika/plugin-build-node"
       ],
       [
         "@pika/plugin-copy-assets"
@@ -42,27 +34,29 @@
   "scripts": {
     "prettier": "prettier --write \"{src,stories}/**/*.{js,tsx}\"",
     "start": "start-storybook -p 6006",
-    "pub": "npm run build && npm publish pkg",
+    "pub": "npm run build && npm publish pkg && git push",
     "build": "pack build",
     "deploy": "storybook-to-ghpages",
     "lint-staged": "lint-staged"
   },
   "devDependencies": {
-    "@pika/plugin-build-node": "^0.5.1",
-    "@pika/plugin-build-types": "^0.5.1",
-    "@pika/plugin-copy-assets": "^0.5.1",
-    "@pika/plugin-standard-pkg": "^0.5.1",
-    "@pika/types": "^0.5.1",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/preset-react": "^7.8.3",
+    "@babel/preset-typescript": "^7.8.3",
+    "@pika/plugin-copy-assets": "^0.6.1",
+    "@pika/plugin-ts-standard-pkg": "^0.6.1",
+    "@pika/types": "^0.6.1",
     "@storybook/react": "^5.1.9",
     "@storybook/storybook-deployer": "^2.8.1",
     "babel-loader": "^8.0.6",
     "lint-staged": "^9.2.1",
-    "pika-plugin-build-web-babel": "^0.6.0",
+    "pika-plugin-build-web-babel": "^0.7.0",
     "pika-plugin-clean-dist-src": "^0.1.1",
     "pre-commit": "1.x",
     "prettier": "^1.18.2",
     "react": "16.x",
-    "react-dom": "16.x"
+    "react-dom": "16.x",
+    "typescript": "^3.7.5"
   },
   "lint-staged": {
     "*.{tsx,js,jsx,ts}": [
