--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "zscroller",
-  "version": "0.6.0-beta.18",
+  "version": "0.6.0",
   "description": "dom scroller based on zynga scroller",
   "keywords": [
     "zynga scroller",
@@ -35,7 +35,7 @@
     "prettier": "prettier --write \"{src,stories}/**/*.{js,tsx}\"",
     "start": "start-storybook -p 6006",
     "pub": "npm run build && npm publish pkg && git push",
-    "build": "pack build",
+    "build": "pika-pack build",
     "deploy": "storybook-to-ghpages",
     "lint-staged": "lint-staged"
   },
@@ -43,6 +43,7 @@
     "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/preset-react": "^7.8.3",
     "@babel/preset-typescript": "^7.8.3",
+    "@pika/pack": "^0.5.0",
     "@pika/plugin-copy-assets": "^0.6.1",
     "@pika/plugin-ts-standard-pkg": "^0.6.1",
     "@pika/types": "^0.6.1",
